# git-semver

./: Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  flake.nix  justfile
.github/workflows/: build.yml
src/: main.rs
